@@ -1,3 +1,7 @@
+2004-10-08  Karl Berry  <karl@gnu.org>
+
+	* info/Makefile.am (generated_sources): remove.  Found by Stepan.
+
 2004-10-08  Stepan Kasal  <kasal@ucw.cz>
 
 	Support cross compiling.  Based on research by Mark Fortescue.
